force-app/main/default/objects/Website_Password_Reset__c/Website_Password_Reset__c.object-meta.xml
<CustomObject>
    <description>Created for website password authentication purposes</description>
    <label>Website Password Reset</label>
    <nameField>
        <displayFormat>WPR-{00000000}</displayFormat>
        <label>Reset ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Website Password Resets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>