force-app/main/default/objects/Website_Password_Reset__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <description>Created for website password authentication purposes</description>
    <label>Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Password_Resets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>