force-app/main/default/objects/Website_Password_Reset__c/fields/Requested_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Requested_DateTime__c</fullName>
    <description>Created for website password authentication purposes</description>
    <label>Requested DateTime</label>
    <type>DateTime</type>
</CustomField>