force-app/main/default/objects/Website_Password_Reset__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Created for website password authentication purposes</description>
    <inlineHelpText>0 – Requested
1 – Reset Completed
2 – Reset Failed due to Expiry</inlineHelpText>
    <label>Status</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>