force-app/main/default/objects/Website_Password_Reset__c/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <description>Created for website password authentication purposes</description>
    <label>Token</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>