force-app/main/default/objects/Website_Password_Reset__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Requested_DateTime__c</columns>
    <columns>Modified_DateTime__c</columns>
    <columns>Member__c</columns>
    <columns>Token__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>All</label>
</ListView>